resolves hover state image looking off center

--- a/express/blocks/shared/basic-carousel.css
+++ b/express/blocks/shared/basic-carousel.css
@@ -95,7 +95,7 @@ main .basic-carousel.four.template-x.horizontal .template:not(.placeholder) img:
 }
 
 main .basic-carousel-container .template.basic-carousel-element .button-container.singleton-hover {
-  /* width: max-content; */
+  width: max-content;
   opacity: 1;
 }
 
